$Id$


2003/12/18 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added MD algorithm: MD5


===========================================================================
MARK: released gwenhywfar-0.9beta9 (2003/12/15)
===========================================================================


2003/12/13 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added string functions to base/buffer module
- improved library loader
- added code for DLL init
- Gwen now initializes itself upon loading
- added README.W32 for people who want to compile Gwenhywfar on Windoze


===========================================================================
MARK: released gwenhywfar-0.9beta8 (2003/12/10)
===========================================================================


2003/12/10 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- started porting Gwen to Windoze


===========================================================================
MARK: released gwenhywfar-0.9beta7 (2003/12/06)
===========================================================================


2003/12/06 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- prepared next release


2003/12/04 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- removed IPC stuff from Gwenhywfar. You can find the IPC stuff in
  the same CVS repository as Gwenhywfar. The module name is "gwenipc".
- finally fixed last typos regarding Gwen's name ;-)
  Now I addresses GWENHYFWAR (written in all-capitals).


2003/12/02 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- removed usage of libefence from test program


2003/12/01 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed some serious bugs in list code (this class seemed to be so simple,